Fixed area out of bounds

--- a/public/style.css
+++ b/public/style.css
@@ -43,13 +43,15 @@ body {
 .namecenterpage .a {
   left: 50;
   top: 50;
+  font-weight: normal;
   position: absolute;
   letter-spacing: 0.7rem;
   z-index: 2;
 }
 
 .namecenterpage .b {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: x-large;
+  font-weight: 800;
   /* background-color: black;
   color: white; */
   left: 50;
@@ -60,7 +62,7 @@ body {
 }
 
 .namecenterpage .c {
-  font-weight: bolder;
+  font-weight: normal;
   left: 48;
   bottom: 320px;
   position: absolute;
